--- a/query.css
+++ b/query.css
@@ -9,6 +9,9 @@
   .projects h1 {
     font-size: 50px;
   }
+  .page2_title {
+    text-align: center;
+  }
 
   .bio h2 {
     font-size: 20px;
@@ -231,6 +234,9 @@
     width: 50%;
   }
 
+  .contact_box {
+    text-align: center;
+  }
   /**OVERLAY*/
   .messageBox form {
     width: 300px;
